<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data></data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:padding="30dp"
        android:orientation="vertical">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:visibility="gone" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:gravity="center_horizontal"
            android:textColor="@color/blue_inactive"
            android:textSize="17sp"
            android:fontFamily="@font/hind_medium"
            android:layout_height="wrap_content"
            android:text="Neler olup bittiğini öğrenmek için aramıza katıl!" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


        <EditText
            android:id="@+id/edtUserName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:ems="10"
            android:layout_marginTop="20dp"
            android:hint="@string/register_username_hint"
            android:background="@drawable/login_edittext_background"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/edtFullName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:ems="10"
            android:layout_marginTop="10dp"
            android:hint="@string/register_fullname_hint"
            android:background="@drawable/login_edittext_background"
            android:inputType="textEmailAddress" />
        <EditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:ems="10"
            android:layout_marginTop="10dp"
            android:hint="@string/register_email_hint"
            android:background="@drawable/login_edittext_background"
            android:inputType="textEmailAddress" />
        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:ems="10"
            android:hint="@string/login_password_hint"
            android:layout_marginTop="10dp"
            android:background="@drawable/login_edittext_background"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/registerButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="19sp"
            android:background="@drawable/login_button_background"
            android:text="@string/register_do" />




    </LinearLayout>
</layout>