<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:theme="@style/AppBottomSheetDialogTheme"
    tools:context=".ui.user.profile.ProfileBottomSheetFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical"
        android:paddingBottom="30dp"
        tools:context=".ui.user.profile.ProfileBottomSheetFragment">

        <View
            android:layout_width="70dp"
            android:layout_height="3dp"
            android:layout_gravity="center_horizontal"
            android:background="@color/grey_active" />

        <TextView
            android:id="@+id/bsm_settings"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:fontFamily="@font/hind_regular"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:text="@string/bsm_item1"
            android:textColor="@color/black"
            android:textSize="17sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@drawable/divider" />

        <TextView
            android:id="@+id/bsm_explore_other"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:fontFamily="@font/hind_regular"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:text="@string/bsm_item2"
            android:textColor="@color/black"
            android:textSize="17sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@drawable/divider" />

        <TextView
            android:id="@+id/bsm_statistics"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:fontFamily="@font/hind_regular"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:text="@string/bsm_item3"
            android:textColor="@color/black"
            android:textSize="17sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@drawable/divider" />

        <TextView
            android:id="@+id/bsm_about_app"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:fontFamily="@font/hind_regular"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:text="@string/bsm_item4"
            android:textColor="@color/black"
            android:textSize="17sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@drawable/divider" />

        <TextView
            android:id="@+id/bsm_exit_app"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:fontFamily="@font/hind_medium"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:text="@string/bsm_item5"
            android:textColor="@color/red_active"
            android:textSize="17sp" />

    </LinearLayout>

</LinearLayout>