<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:padding="30dp"
        android:orientation="vertical">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:visibility="gone" />


        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:tint="@color/blue_inactive"
            app:srcCompat="@drawable/app_icon_black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:fontFamily="@font/hind_medium"
            android:text="Log in to Confession"
            android:textColor="@color/blue_inactive"
            android:gravity="center_horizontal"
            android:layout_marginBottom="40dp"/>

        <EditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:ems="10"
            android:hint="@string/login_email_hint"
            android:background="@drawable/login_edittext_background"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:ems="10"
            android:hint="@string/login_password_hint"
            android:layout_marginTop="10dp"
            android:background="@drawable/login_edittext_background"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="120dp"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="19sp"
            android:background="@drawable/login_button_background"
            android:text="@string/login_do" />

        <TextView
            android:id="@+id/goRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:fontFamily="@font/hind_semibold"
            android:textColor="@color/blue_inactive"
            android:layout_margin="10dp"
            android:text="@string/register" />


    </LinearLayout>
</layout>