<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <import type="android.view.View"/>
        <variable
            name="singleUser"
            type="frt.gurgur.theconfession.model.user.User" />
    </data>


    <androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">


        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:id="@+id/profileAppBar"
            android:layout_height="wrap_content"
            android:background="@color/white"
            >

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/collapsing_toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fitsSystemWindows="true"
                app:contentScrim="?android:attr/colorControlHighlight"
                app:expandedTitleMarginEnd="64dp"
                app:expandedTitleMarginStart="48dp"
                app:expandedTitleTextAppearance="@android:color/transparent"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_collapseMode="parallax"
                    android:orientation="vertical">
                    <ProgressBar
                        android:id="@+id/progressBar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_gravity="center_horizontal"
                        android:visibility="gone" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="15dp"
                        android:paddingTop="10dp"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <de.hdodenhof.circleimageview.CircleImageView
                            xmlns:app="http://schemas.android.com/apk/res-auto"
                            android:id="@+id/profile_image"
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            app:imageUrl="@{singleUser.photo}"
                            app:civ_border_width="2dp"
                            app:civ_border_color="#FF000000"/>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="100dp"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:gravity="center_vertical"
                            android:orientation="vertical">


                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:orientation="horizontal">

                                <LinearLayout
                                    android:id="@+id/layoutSharedCount"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:layout_weight="1"
                                    android:clickable="true"
                                    android:background="?android:attr/selectableItemBackground"
                                    android:gravity="center"
                                    android:orientation="vertical">

                                    <TextView
                                        android:id="@+id/textView6"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:fontFamily="@font/hind_medium"
                                        android:textSize="15sp"
                                        android:text="@string/profile_shared_count" />

                                    <TextView
                                        android:id="@+id/textView3"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:fontFamily="@font/hind_semibold"
                                        android:textSize="16sp"
                                        android:text="@{Integer.toString(singleUser.postCount)}" />
                                </LinearLayout>

                                <LinearLayout
                                    android:id="@+id/layoutFollowerCount"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:layout_weight="1"
                                    android:clickable="true"
                                    android:background="?android:attr/selectableItemBackground"
                                    android:gravity="center"
                                    android:orientation="vertical">

                                    <TextView
                                        android:id="@+id/textView7"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:fontFamily="@font/hind_medium"
                                        android:textSize="15sp"
                                        android:text="@string/profile_follower_count" />

                                    <TextView
                                        android:id="@+id/textView4"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:fontFamily="@font/hind_semibold"
                                        android:textSize="16sp"
                                        android:text="@{Integer.toString(singleUser.followerCount)}" />
                                </LinearLayout>

                                <LinearLayout
                                    android:id="@+id/layoutFollowingCount"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:layout_weight="1"
                                    android:clickable="true"
                                    android:background="?android:attr/selectableItemBackground"
                                    android:gravity="center"
                                    android:orientation="vertical">

                                    <TextView
                                        android:id="@+id/textView8"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:fontFamily="@font/hind_medium"
                                        android:textSize="15sp"
                                        android:text="@string/profile_following_count" />

                                    <TextView
                                        android:id="@+id/textView5"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:fontFamily="@font/hind_semibold"
                                        android:textSize="16sp"
                                        android:text="@{Integer.toString(singleUser.followingCount)}" />
                                </LinearLayout>

                            </LinearLayout>

                        </LinearLayout>


                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp">


                        <TextView
                            android:id="@+id/txtFullName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@{singleUser.fullname}"
                            android:textSize="17sp"
                            android:fontFamily="@font/hind_semibold"/>

                        <TextView
                            android:id="@+id/txtAboutUser"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@{singleUser.about}"
                            android:lineSpacingMultiplier="0.7"
                            android:visibility="@{singleUser.about.length()>0 ? View.VISIBLE : View.GONE }"
                            android:fontFamily="@font/hind_medium"/>

                        <Button
                            android:id="@+id/editProfileButton"
                            android:layout_width="match_parent"
                            android:layout_height="35dp"
                            android:layout_marginTop="5dp"
                            android:background="@drawable/login_button_background"
                            android:text="@string/profile_edit"
                            android:gravity="center"
                            android:textColor="@color/white"
                            android:fontFamily="@font/hind_medium"
                            android:textAllCaps="false"/>


                    </LinearLayout>



                </LinearLayout>


            </com.google.android.material.appbar.CollapsingToolbarLayout>


            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tablayoutProfile"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:tabGravity="fill"
                style="@style/MyCustomTabLayout"
                app:tabMode="fixed"/>



        </com.google.android.material.appbar.AppBarLayout>

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/viewpagerProfile"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"/>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>















</layout>